# vertical-doc-agent

./: .env.docker.example  .env.example  .gitignore  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: docx-render-profile.json  llm-task-profiles.json
configs/bid_templates/: construction_general.json  epc_general.json
deploy/nginx/: default.conf
migrations/: 001_init.sql  002_job_runtime_guardrails.sql  003_user_accounts.sql
scripts/: apply_excellent_bid_image_promotion.py  manage_db.py  promote_excellent_bid_images.py  run_web.py  stage_excellent_bid_images.py
scripts/sample_probe/: analyze_docx_structural_quality.py  batch_run_score_point_extraction.py  batch_test_tender_inputs.py  build_chapter_generation_inputs.py  build_chapter_image_retrieval_quality_report.py  build_chapter_image_reuse_quality_report.py  build_chapter_llm_input_slim_report.py  build_chapter_material_retrieval_inputs.py  build_excellent_bid_fusion_index.py  build_excellent_bid_image_asset_review.py  build_excellent_bid_material_library.py  build_excellent_bid_material_quality_report.py  build_image_caption_governance_preview.py  build_image_quality_fix_report.py  build_outline_refinement_inputs.py  build_outline_review_page.py  build_outline_review_view.py  build_slim_v2_regression_report.py  build_technical_bid_outline.py  build_tender_extraction_inputs.py  build_tender_parse_quality_baseline.py  build_tender_parse_report.py  check_docx_heading_format.py  check_docx_table_readability.py  (+26 more)
tests/: conftest.py
web/: app.js  index.html  styles.css
(+121 files in other folders)
