[project]
name = "construction-bidding-ai-agent"
version = "0.1.0"
description = "Stage-0 prototype for a construction technical bid generation agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "openai>=1.52",
    "pdfplumber>=0.11",
    "Pillow>=10",
    "psycopg[binary]>=3.2",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
